--- a/_doors/13.markdown
+++ b/_doors/13.markdown
@@ -12,8 +12,9 @@ Weitere commits an [fadecut](https://github.com/micressor/fadecut):
 
 * verbesserte Fehlerbehandlung des streamripper sub-prozesses [fixed issue #25](https://github.com/micressor/fadecut/issues/25)
 * in der man page das neue Feature zum Auflisten der fadecut profile beschrieben (option -l)
- 
 
 ### [Thomas Philipona](https://github.com/phil-pona)
 Heute habe ich im [schemaspy](https://github.com/drnoa/schemaspy) einen Integration Test basierend auf einer H2 DB gebaut. Mit dem können wir nun einfach ganze Reportgenerations testen und entsprechend die einzelnen Bereiche in den Reports anpassen, resp. erweitern. Zusätzlich habe ich die Table Page noch einige Bereiche informationen erweitert.
 
+### [Lorenz Bischof](https://github.com/lbischof)
+Heute habe ich die erste Version von [puzzle-laptop-bootstrap](https://github.com/lbischof/puzzle-laptop-bootstrap) gepusht.
