--- a/_doors/14.markdown
+++ b/_doors/14.markdown
@@ -11,7 +11,10 @@ active: true
 Heute habe ich die ConstraintsPage im [schemaspy](https://github.com/drnoa/schemaspy) mit Freemarker Templates implementiert und die Freemarker Version auf 2.3.23 aktualisiert. Zudem habe ich im Integration Test von gestern weitere Checks implementiert.
 
 ### [Pascal Simon](https://github.com/psunix)
-[Cryptopus](https://github.com/puzzle/cryptopus): Mit meinem heutigen Commit ist es nicht mehr möglich als Root ein Team zu erstellen mit dem Flag noroot. 
+[Cryptopus](https://github.com/puzzle/cryptopus): Mit meinem heutigen Commit ist es nicht mehr möglich als Root ein Team zu erstellen mit dem Flag noroot.
 
 ### [Martin Gafner](https://github.com/mgafner)
-Das fadecut repo ist jetzt in die neue Organisation [fadecut](https://github.com/fadecut/fadecut) migriert. Und ich habe ein gewünschtes Features implementiert. Ab jetzt werden die Dateien bei einem erneuten Encodieren mit der gleichen Bitrate wie das ursprüngliche File codiert. Damit ist [issue #19](https://github.com/micressor/fadecut/issues/19) erledigt. 
+Das fadecut repo ist jetzt in die neue Organisation [fadecut](https://github.com/fadecut/fadecut) migriert. Und ich habe ein gewünschtes Features implementiert. Ab jetzt werden die Dateien bei einem erneuten Encodieren mit der gleichen Bitrate wie das ursprüngliche File codiert. Damit ist [issue #19](https://github.com/micressor/fadecut/issues/19) erledigt.
+
+### [Lorenz Bischof](https://github.com/lbischof)
+Weitere [Änderungen](https://github.com/phil-matti/ipa-latex-template/pull/4) am [IPA Latex-Template](https://github.com/phil-matti/ipa-latex-template)
