--- a/_doors/15.markdown
+++ b/_doors/15.markdown
@@ -5,4 +5,4 @@ active: false
 ---
 
 ### [Pascal Simon](https://github.com/psunix)
-[Cryptopus](https://github.com/psunix/profile): Anstelle eines Commits für Cryptopus gibt es heute mal einen kleinen Bash Script. Mit dem Befehl 'cdg' wechselt man in das Haupt-Verzeichnis des aktuellen Git-Repos.
+[Profile](https://github.com/psunix/profile): Anstelle eines Commits für Cryptopus gibt es heute mal einen kleinen Bash Script. Mit dem Befehl 'cdg' wechselt man in das Haupt-Verzeichnis des aktuellen Git-Repos.
