--- a/_doors/15.markdown
+++ b/_doors/15.markdown
@@ -4,7 +4,7 @@ title:	156. Geburtstag des Esperanto Erfinders
 active: true
 ---
 
-Gemäss (WDR)[http://www1.wdr.de/themen/archiv/stichtag/stichtag3826.html] ist vor 156 Jahren der Esperanto-Begründer Ludwik Zamenhof geboren. Er hat Esperanto erfunden und auf alle Rechte an seinem Werk verzichtet. Er forderte seine Anhänger zur freien Nutzung, Veröffentlichung und Fortentwicklung der Sprache auf – ein Konzept, das im Computerzeitalter als "open source" erfolgreich genutzt wird. ;-)
+Gemäss [WDR](http://www1.wdr.de/themen/archiv/stichtag/stichtag3826.html) ist vor 156 Jahren der Esperanto-Begründer Ludwik Zamenhof geboren. Er hat Esperanto erfunden und auf alle Rechte an seinem Werk verzichtet. Er forderte seine Anhänger zur freien Nutzung, Veröffentlichung und Fortentwicklung der Sprache auf – ein Konzept, das im Computerzeitalter als "open source" erfolgreich genutzt wird. ;-)
 
 ### [Pascal Simon](https://github.com/psunix)
 [Profile](https://github.com/psunix/profile): Anstelle eines Commits für Cryptopus gibt es heute mal einen kleinen Bash Script. Mit dem Befehl 'cdg' wechselt man in das Haupt-Verzeichnis des aktuellen Git-Repos.
