--- a/_doors/16.markdown
+++ b/_doors/16.markdown
@@ -1,7 +1,10 @@
 ---
 day: 	16
 title:	Es geht weiter...
-active: false
+active: true
 ---
+
+[Lorenz Bischof](https://github.com/lbischof)
+Ich habe das [Dashing](dashing.io)-Widget, welches die aktuelle Aaretemperatur anzeigt, veröffentlicht. [dashing-aare-temperatur](https://github.com/lbischof/dashing-aare-temperatur)
 
 
