--- a/_doors/18.markdown
+++ b/_doors/18.markdown
@@ -16,5 +16,5 @@ Heute habe ich die Testdatenbank im Projekt [schemaspy](https://github.com/drnoa
 [IPA Latex-Template](https://github.com/phil-matti/ipa-latex-template): Ich habe die Dokumentation ergänzt und ein bisschen umstrukturiert. Auch das Dockerfile ist jetzt übersichtlicher. [Pull Request](https://github.com/phil-matti/ipa-latex-template/pull/7)
 
 ### [Martin Gafner](https://github.com/mgafner)
-Issues #11 und #31 von [fadecut](https://github.com/fadecut/fadecut) bearbeitet (quiet und verbose mode). Der getopt loop verbessert und das Initialisieren zum Start des Programms verbessert.
+Issues #11 und #31 von [fadecut](https://github.com/fadecut/fadecut) bearbeitet (quiet und verbose mode). Den getopt loop verbessert und das Initialisieren zum Start des Programms verbessert.
 
