--- a/_doors/20.markdown
+++ b/_doors/20.markdown
@@ -10,4 +10,5 @@ heute habe ich die Metadaten des Cryptopus Projektes auf [sourceforge](https://s
 ### [Thomas Philipona](https://github.com/phil-pona)
 Die Columns Page des [schemaspy](https://github.com/drnoa/schemaspy)s wird nun auch mittels Freemarker Template generiert. Zusätzlich wurde die Legende als Komponente definiert und auf der Tables Seite integriert.
 
-
+### [Pascal Simon](https://github.com/psunix)
+[Cryptopus](https://github.com/puzzle/cryptopus): Neuen Footer eingefügt und Flash Message Div auf fixed geändert.
