--- a/_doors/13.markdown
+++ b/_doors/13.markdown
@@ -22,6 +22,8 @@ Heute habe ich die erste Version von [puzzle-laptop-bootstrap](https://github.co
 ### [Philipp Matti](https://github.com/phil-matti)
 Ich habe heute das [ipa-latex-template](https://github.com/phil-matti/ipa-latex-template) gefixt, es gab einen import Error + Readme erweitert für die Installation unter Ubuntu 14.04 und Windows 7.
 
-
 ### [Pascal Simon](https://github.com/psunix)
 [Cryptopus](https://github.com/puzzle/cryptopus): So, Cryptopus in neuem Kleid. Bootstrap Tabellen und Form Items.
+
+### [Daniel Tschan](https://github.com/dtschan)
+An der Automatisierung der Installation des OpenShift Enterprise EFK Stacks weitergearbeitet: <https://github.com/puzzle/puppet-openshift3/commits/logging>
