--- a/_doors/22.markdown
+++ b/_doors/22.markdown
@@ -18,3 +18,6 @@ Für das [Pebble Smartwatch](https://www.pebble.com/) Watchface Projekt [BlueFut
 
 ### [Max Burri](https://github.com/mburri)
 [kicker-planner:](https://github.com/mburri/kicker-planner) Die step-by-step Beschreibung meiner Schritte verbessert, Tests für den redux-store geschrieben und ein einfaches [server-script](https://github.com/mburri/kicker-planner/blob/eeb58686bfd4258546a7714fe1adb3756fd7d7fc/server/index.js) erstellt. Machen tuts eigentlich noch nichts. Die Idee ist, dass der (Websocket) Server für jeden Change im redux State alle verbundenen Clients benachrichtigt, d.h. den neuen State "mitteilt".  
+
+### [Peter Mumenthaler](https://github.com/pmumenthaler)
+[Sortmypics:](https://github.com/puzzle/sortmypics) ist nun fully objektorientiert. Dazu den Code einer Diät unterzogen. 
